--- a/FinalPOO/.project
+++ b/FinalPOO/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FinalPOO</name>
+	<name>XD</name>
 	<comment></comment>
 	<projects>
 	</projects>
